# dcat

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  conanfile.py  dcat.iss  justfile  meson.build  meson_options.txt  package.py  package.sh  shader.wgsl  test_kitty.ps1  vcpkg.json
.github/actions/setup/: action.yml
.github/scripts/: package.sh
.github/workflows/: build.yml  release.yml
cmake/: FetchSixel.cmake
cmake.deps/: CMakeLists.txt
packaging/linux/: dcat.desktop
packaging/windows/: dcat.iss
shaders/: common.slang  meson.build  shader.frag  shader.frag.slang  shader.vert  shader.vert.slang  skydome.frag  skydome.frag.slang  skydome.vert  skydome.vert.slang  terminal.comp
src/: animation.c  animation.cpp  animation.h  animation.hpp  camera.c  camera.cpp  camera.h  camera.hpp  camera.rs  cli.rs  gpu.rs  input_device.cpp  input_device.h  input_device.hpp  main.c  main.cpp  main.rs  model.c  model.cpp  model.h  model.hpp  model.rs  skydome.cpp  skydome.h  skydome.hpp  terminal.c  terminal.cpp  terminal.h  terminal.hpp  terminal.rs  texture.cpp  texture.hpp  texture.rs  types.h  version.h.in  vertex.rs  vulkan_renderer.c  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderer.hpp
src/core/: app.c  app.h  args.c  args.h  platform_compat.h  signals.c  signals.h  threading.h  time_utils.h  types.h
src/graphics/: animation.c  animation.h  camera.c  camera.h  model.c  model.h  skydome.c  skydome.h  texture.c  texture.h  texture_loader.c  texture_loader.h
src/input/: input_device.c  input_handler.c  input_handler.h  input_handler_common.c  input_handler_posix.c  input_handler_win.c
src/platform/: io.c  io.h  path.c  path.h
src/renderer/: vk_device.c  vk_device.h  vk_memory.c  vk_memory.h  vk_pipeline.c  vk_pipeline.h  vk_resources.c  vk_resources.h  vk_shader.c  vk_shader.h  vk_upload.c  vk_upload.h  vulkan_renderer.c  vulkan_renderer.h
src/terminal/: block_characters.c  block_characters.h  chafa_driver.c  chafa_driver.h  char_render.c  char_render.h  driver_factory.c  driver_factory.h  kitty.c  kitty.h  kitty_shm.c  kitty_shm.h  output_driver.h  palette_characters.c  palette_characters.h  session.c  session.h  sixel.c  sixel.h  terminal.c  terminal.h  terminal_pixels.c  terminal_pixels.h  truecolor_characters.c  truecolor_characters.h
subprojects/: assimp.wrap  libsixel.wrap  vips.wrap
subprojects/packagefiles/libsixel/: meson.build  sixel_static_header.py
tests/: meson.build  test_args.c  test_chafa_driver.c  test_char_render.c  test_cli.py  test_input_handler.c  test_model.c
vcpkg-overlays/ports/libsixel/: CMakeLists.txt  config.h.in  portfile.cmake  tty_win32.c  unofficial-libsixel-config.cmake.in  usage  vcpkg.json
vcpkg-overlays/ports/vips/: portfile.cmake  unofficial-vips-config-version.cmake  unofficial-vips-config.cmake  usage  vcpkg.json
