[package]
name = "dcat"
description = "A terminal-based 3D model viewer"
license = "MIT"
repository = "https://github.com/Murat65536/dcat"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = "0.18"
image = "0.25"
russimp = "3.2"
clap = { version = "4.5", features = ["derive"] }
termion = "4.0"
ctrlc = "3.5"
sixel-rs = "0.5"
base64 = "0.22"
wgpu = "27.0"
pollster = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
libc = "0.2"
input_query = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
